# x-post-cli

./: .env.example  README.md  pyproject.toml
src/x/: auth.py  cli.py  client.py
src/x_post/: cli.py  config.py  text.py
tests/: helpers.py  test_client.py  test_config.py
