[project]
name = "x-post-cli"
version = "0.2.2"
requires-python = ">=3.11"
dependencies = ["requests", "requests-oauthlib"]

[project.scripts]
x-post-cli = "x_post.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/x_post"]
